= 4.8.8 - TBD =
Changed: Changed text input to select for classic editor "Insert Download" popup ( [#1197](https://github.com/WPChill/download-monitor/issues/1197) )

= 4.8.7 - 25.07.2023 =
Fixed: Compatibility with Elementor PRO page transitions ( [#1299](https://github.com/WPChill/download-monitor/issues/1299) )
Fixed: Always load frontend scripts if "No Access Modal" is enabled. ( [#1298](https://github.com/WPChill/download-monitor/issues/1298) )
Fixed: Escaping error on download button templates. ( [#1277](https://github.com/WPChill/download-monitor/issues/1277) )
Fixed: Character encoding on ajax error reporting ( [#1258](https://github.com/WPChill/download-monitor/issues/1258) )
Fixed: No Access Modal error when download does not exist ( [#1300](https://github.com/WPChill/download-monitor/issues/1300) )
Added: Filter to retreived log item in DLM_WordPress_Log_Item_Repository ( [#1303](https://github.com/WPChill/download-monitor/issues/1303) )
Fixed: Compatibility with Wp Maximum Upload File Size plugin ( [#1304](https://github.com/WPChill/download-monitor/issues/1304) )
Fixed: Create No Access Page on plugin install/activate. ( [#1305](https://github.com/WPChill/download-monitor/issues/1305) )
Fixed: Removed unused onboarding page code. ( [#1306](https://github.com/WPChill/download-monitor/issues/1306) )
Fixed: Minor upsells update ( [#1308](https://github.com/WPChill/download-monitor/issues/1308) )
Fixed: Minor admin visual update for wp 6.3 ( [#1310](https://github.com/WPChill/download-monitor/issues/1310) )
Fixed: Typo ( [#1309](https://github.com/WPChill/download-monitor/issues/1309) )
Fixed: Upsell still shows even license valid ( [#1301](https://github.com/WPChill/download-monitor/issues/1301) )
Added: Filter to disable download progress indicator ( [#1213](https://github.com/WPChill/download-monitor/issues/1213) )


= 4.8.6 - 03.07.2023 =
Fixed: Check custom tables for columns ( [#1288](https://github.com/WPChill/download-monitor/issues/1288) )